--- a/api/order_api/pom.xml
+++ b/api/order_api/pom.xml
@@ -9,5 +9,11 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+	</dependencies>
 	<artifactId>order_api</artifactId>
 </project>
