--- a/order_two/src/main/resources/bootstrap.yml
+++ b/order_two/src/main/resources/bootstrap.yml
@@ -7,22 +7,13 @@ spring:
     sentinel:
       transport:
         dashboard: localhost:8080
-        port: 8719
-    #      datasource:
-    #        order:
-    #          nacos:
-    #            server-addr: 106.75.209.173:8848
-    #            data-id: order-sentinel
-    #            group-id: DEFAULT_GROUP
-    #            data-type: json
-    #            rule-type: flow
-    #        shop:
-    #          nacos:
-    #            server-addr: 106.75.209.173:8848
-    #            data-id: shop-sentinel
-    #            group-id: DEFAULT_GROUP
-    #            data-type: json
-    #            rule-type: flow
+        datasource:
+          order:
+            nacos:
+              server-addr: 106.75.209.173:8848
+              data-id: ${spring.application.name}-flow-rules
+              rule-type: flow
+              namespace: 360cdb6d-10bd-4fc1-931a-b4d767d5f1b7
     nacos:
       config:
         namespace: 360cdb6d-10bd-4fc1-931a-b4d767d5f1b7
@@ -32,11 +23,6 @@ spring:
         # 老版本shared-dataids 在这里已经被废弃
         shared-dataids: application.yml
         refreshable-dataids: application.yml
-      #        shared-configs[0]:
-#          # data-id要求必须有后缀名（这个要求很正常，但是配合配置中心一点也不好用）
-#          data-id: application.yml
-#          group: DEFAULT_GROUP
-#          refresh: true
       discovery:
         server-addr: 106.75.209.173:8848
         namespace: 360cdb6d-10bd-4fc1-931a-b4d767d5f1b7
